# MazalTov

./: .gitlab-ci.yml  README.md  Tiltfile  deployment.yaml  k3d.yaml  kustomization.yaml  values.yaml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/backend/: settings.py  urls.py
backend/birthdays/: models.py  permissions.py  serializers.py  views.py
backend/birthdays/migrations/: 0001_initial.py
backend/docker-images/: development  production
backend/images/: views.py
charts/birthday-calendar/: Chart.yaml  values.dev.yaml  values.yaml
charts/birthday-calendar/templates/: NOTES.txt  _helpers.tpl  backend-deployment.yaml  backend-key.yaml  backend-pvc.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  nginx-configmap.yaml  nginx-deployment.yaml  nginx-service.yaml
frontend/: .gitignore  Dockerfile  nuxt.config.js  package-lock.json  package.json
frontend/assets/: utils.js
frontend/components/: Avatar.vue  BirthdayCard.vue  ColorPicker.vue  DeleteBtn.vue  UtilityToolbar.vue
frontend/docker-images/: production
frontend/layouts/: default.vue
frontend/pages/: index.vue  login.vue  register.vue
frontend/pages/birthdays/: create.vue
frontend/pages/birthdays/edit/_id/: index.vue
frontend/pages/settings/: index.vue  theme.vue
frontend/pages/settings/user/: password.vue  username.vue
frontend/store/: dates.js  listFactory.js  snackbar.js
frontend/test/mocks/: list.js
frontend/test/store/: list.spec.js
frontend/test/utils/: utils.spec.js
